syntax = 'proto3';

package user;

message UserData {
  string id = 1;
  string role = 2;
  string full_name = 3;
}

message UserFullName {
  string full_name = 1;
  string decryption_of_full_name = 2;
}

